2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* socket/sa_len.c: New file.
	* socket/Makefile (aux): Add it.
	* sysdeps/unix/sysv/linux/Makefile
	[$(subdir) = socket] (sysdep_routines): Don't add sa_len here.
	* sysdeps/unix/sysv/linux/sa_len.c: Just #define HAVE_NET*_H
	and #include <socket/sa_len.c>.
	* sysdeps/unix/sysv/linux/s390/sa_len.c: Just #define
	HAVE_NETIUCV_IUCV_H and #include <sysdeps/unix/sysv/linux/sa_len.c>.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Moved to ...
	* bits/socket.h: ... here.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h (enum __socket_type):
	Add SOCK_CLOEXEC, SOCK_NONBLOCK with values from FreeBSD.
	(SOCK_MAX, SOCK_TYPE_MASK): New macros.

2013-08-03  David S. Miller  <davem@davemloft.net>

	* po/ko.po: Update Korean translation from translation project.

2013-08-01  David S. Miller  <davem@davemloft.net>

	* manual/contrib.texi: Update entry for Siddhesh Poyarekar.  Add
	entries for Will Newton, Andi Kleen, David Holsgrove, and Ondrej
	Bilka.

2013-07-30  David S. Miller  <davem@davemloft.net>

	* po/fr.po: Update French translation from translation project.

2013-07-28  David S. Miller  <davem@davemloft.net>

	* po/cs.po: Update Czech translation from translation project.

	* po/sv.po: Update Swedish translation from translation project.

2013-07-27  David S. Miller  <davem@davemloft.net>

	* po/eo.po: Update Esperanto translation from translation project.

	* po/vi.po: Update Vietnamese translation from translation project.

	* po/de.po: Update German translation from translation project.

2013-07-26  David S. Miller  <davem@davemloft.net>

	* po/bg.po: Update Bulgarian translation from translation project.

	* po/nl.po: Update Dutch translation from translation project.
	* po/pl.po: Update Polish translation from translation project.
	* po/ru.po: Update Russian translation from translation project.

2013-07-24  David S. Miller  <davem@davemloft.net>

	* po/libc.pot: Update.
